[package]
name = "zk-wavescout-contract"
version = "0.2.0"
edition = "2021"
description = "Soroban smart contract for ZK-verified bounties"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.3.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
